--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,19 @@ CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
 
+# Build directories
+build/
+out/
+x64/
+x86/
+Debug/
+Release/
+.vs/
+
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #cmake-build-*
+.idea/
