--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
   codeql:
     name: Security Scan
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     timeout-minutes: 25
     if: ${{ !github.event.pull_request.draft }}
 
