--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,39 +5,43 @@
 name: CodeQL Analysis
 
 on:
-  push:
-    branches: [ main, master, develop, v*.*.* ]
-  pull_request:
-    branches: [ main, master, develop ]
-
-permissions:
-  contents: read
-  security-events: write
+	push:
+		branches: [ main ]
+	pull_request:
+		branches: [ main ]
+	schedule:
+		- cron: '0 2 * * 0'
 
 jobs:
-  codeql:
-    name: Security Scan
-    runs-on: windows-latest
-    timeout-minutes: 25
-    if: ${{ !github.event.pull_request.draft }}
+	analyze:
+		name: Analyze (CodeQL)
+		runs-on: windows-latest
+		permissions:
+			actions: read
+			security-events: write
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v6
+		steps:
+		- name: Checkout repository
+			uses: actions/checkout@v4
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v4
-      with:
-        languages: cpp
+		- name: Initialize CodeQL
+			uses: github/codeql-action/init@v2
+			with:
+				languages: cpp
 
-    - name: Build for analysis
-      run: |
-        mkdir build
-        cd build
-        cmake ..
-        make
+		- name: Setup Visual Studio
+			uses: ilammy/msvc-dev-cmd@v1
+			with:
+				vs-version: '17.0'
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v4
-      with:
-        category: "/language:cpp"
+		- name: Configure CMake (Release x64)
+			run: |
+				cmake -S . -B build -A x64 -T host=x64 -G "Visual Studio 17 2022" -DCMAKE_BUILD_TYPE=Release
+
+		- name: Build with CMake
+			run: |
+				cmake --build build --config Release -j
+
+		- name: Run CodeQL analysis
+			uses: github/codeql-action/analyze@v2
+
