Fix download path
Signed-off-by: Alan Jowett <alan.jowett@microsoft.com>

--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ${{ inputs.artifact_name }}
-          path: downloaded_build
+          path: downloaded_build/${{ inputs.build_dir }}
 
       - name: Verify downloaded build
         run: |
