--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,7 +1,7 @@
 name: CI/CD
 
 # SPDX-License-Identifier: MIT
-# Copyright (c) 2025 scalable_echo_server_demo contributors
+# Copyright (c) 2025 WinUDPShardedEcho contributors
 
 on:
   push:
