--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -1,7 +1,7 @@
 name: Reusable Test
 
 # SPDX-License-Identifier: MIT
-# Copyright (c) 2025 scalable_echo_server_demo contributors
+# Copyright (c) 2025 WinUDPShardedEcho contributors
 
 on:
   workflow_call:
