--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -1,7 +1,7 @@
 name: Reusable Build
 
 # SPDX-License-Identifier: MIT
-# Copyright (c) 2025 scalable_echo_server_demo contributors
+# Copyright (c) 2025 WinUDPShardedEcho contributors
 
 on:
   workflow_call:
@@ -21,7 +21,7 @@ on:
       repository: # Default to this repository if not provided
         required: false
         type: string
-        default: alan-jowett/scalable_echo_server_demo
+        default: alan-jowett/WinUDPShardedEcho
       
 
 jobs:
